tests/ui/did_you_mean/issue-40396.stderr
error: comparison operators cannot be chained
  --> $DIR/issue-40396.rs:2:20
   |
LL |     (0..13).collect<Vec<i32>>();
   |                    ^   ^
   |
help: use `::<...>` instead of `<...>` to specify lifetime, type, or const arguments
   |
LL |     (0..13).collect::<Vec<i32>>();
   |                    ++

error: comparison operators cannot be chained
  --> $DIR/issue-40396.rs:5:8
   |
LL |     Vec<i32>::new();
   |        ^   ^
   |
help: use `::<...>` instead of `<...>` to specify lifetime, type, or const arguments
   |
LL |     Vec::<i32>::new();
   |        ++

error: comparison operators cannot be chained
  --> $DIR/issue-40396.rs:8:20
   |
LL |     (0..13).collect<Vec<i32>();
   |                    ^   ^
   |
help: use `::<...>` instead of `<...>` to specify lifetime, type, or const arguments
   |
LL |     (0..13).collect::<Vec<i32>();
   |                    ++

error: expected one of `!`, `.`, `::`, `;`, `?`, `else`, `{`, or an operator, found `,`
  --> $DIR/issue-40396.rs:11:43
   |
LL |     let x = std::collections::HashMap<i128, i128>::new();
   |                                           ^ expected one of 8 possible tokens
   |
help: use `::<...>` instead of `<...>` to specify lifetime, type, or const arguments
   |
LL |     let x = std::collections::HashMap::<i128, i128>::new();
   |                                      ++

error: expected one of `!`, `.`, `::`, `;`, `?`, `{`, `}`, or an operator, found `,`
  --> $DIR/issue-40396.rs:15:39
   |
LL |         std::collections::HashMap<i128, i128>::new()
   |                                       ^ expected one of 8 possible tokens
   |
help: use `::<...>` instead of `<...>` to specify lifetime, type, or const arguments
   |
LL |         std::collections::HashMap::<i128, i128>::new()
   |                                  ++

error: expected one of `!`, `.`, `::`, `;`, `?`, `{`, `}`, or an operator, found `,`
  --> $DIR/issue-40396.rs:20:39
   |
LL |         std::collections::HashMap<i128, i128>::new();
   |                                       ^ expected one of 8 possible tokens
   |
help: use `::<...>` instead of `<...>` to specify lifetime, type, or const arguments
   |
LL |         std::collections::HashMap::<i128, i128>::new();
   |                                  ++

error: expected one of `!`, `.`, `::`, `;`, `?`, `{`, `}`, or an operator, found `,`
  --> $DIR/issue-40396.rs:25:39
   |
LL |         std::collections::HashMap<i128, i128>::new(1, 2);
   |                                       ^ expected one of 8 possible tokens
   |
help: use `::<...>` instead of `<...>` to specify lifetime, type, or const arguments
   |
LL |         std::collections::HashMap::<i128, i128>::new(1, 2);
   |                                  ++

error[E0308]: mismatched types
  --> $DIR/issue-40396.rs:13:17
   |
LL |     let x: () = 42;
   |            --   ^^ expected `()`, found integer
   |            |
   |            expected due to this

error[E0308]: mismatched types
  --> $DIR/issue-40396.rs:18:17
   |
LL |     let x: () = 42;
   |            --   ^^ expected `()`, found integer
   |            |
   |            expected due to this

error[E0308]: mismatched types
  --> $DIR/issue-40396.rs:22:21
   |
LL |         let x: () = 42;
   |                --   ^^ expected `()`, found integer
   |                |
   |                expected due to this

error[E0308]: mismatched types
  --> $DIR/issue-40396.rs:27:21
   |
LL |         let x: () = 32;
   |                --   ^^ expected `()`, found integer
   |                |
   |                expected due to this

error: aborting due to 11 previous errors

For more information about this error, try `rustc --explain E0308`.
